test/parsetest/valid/DanglingElse.java
class AlternatingOperators {
    public void M(int x, boolean y) {
        if (y) if (x) x = y; else y = x;
    }
}

