test/parsetest/invalid/wrong_parameter1.java

class foo {
  public void a(int x, 123 y) {}
}
